Fixing the logic, and the spacing of the products

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,8 @@ main {
     text-align: center;
     min-height: 280px;
     margin-bottom: 40px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 #heading {
@@ -151,26 +153,32 @@ a:focus {
 
 #productsContainer {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    overflow-x: -moz-scrollbars-horizontal;
     flex-direction: row;
     align-items: stretch;
     margin-bottom: 44px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 0px;
-    padding-right: 0px;
-    max-width: 552px;
-    overflow:hidden;
+    text-align: center;
+
 }
 
 #productsContainer .productDiv {
     width: 158px;
     border-radius: 2px;
     margin-bottom: 20px;
+    margin-left: 0px;
+    margin-right: 12px;
     background-color: #D3C2A7;
     /*box-shadow: 0px 2px 2px rgba(113, 109, 110, 0.15);*/
     box-shadow: 0px 4px 12px rgba(39, 44, 47, 0.1);
+}
+
+.emptyProductDiv {
+    width: 158px;
 }
 
 
@@ -277,10 +285,11 @@ a:focus {
 .hurrayAnimation {
     width: 300px;
     height: 300px;
-    margin-left: 25vw;
+    margin-left: auto;
+    margin-right: auto;
     top:200px;
     position: absolute;
-    display: block;
+    display: flex;
     z-index: 2;
     background: transparent;
     overflow: hidden;
@@ -555,7 +564,15 @@ lottie-player {
         max-height: 100vh;
     }
 
-    #productsContainer {
-        max-width: 376px;
+
+    .emptyProductDiv {
+        display: none;
+    }
+    
+
+    lottie-player {
+        position: absolute;
+        margin-left: 10vw;
+        top: -5vh;
     }
 }
